YI-147: fixes to quote spacing

--- a/web/themes/custom/yale_infosec/components/02-molecules/image-section/_image-section.scss
+++ b/web/themes/custom/yale_infosec/components/02-molecules/image-section/_image-section.scss
@@ -22,4 +22,9 @@
 
 .image-section__aside {
   grid-area: sidebar;
+
+  .blockquote {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
 }
